--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.png filter=lfs diff=lfs merge=lfs -text
+resources/spikes.png filter=lfs diff=lfs merge=lfs -text
+resources/spikes.png.import filter=lfs diff=lfs merge=lfs -text
