--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.png filter=lfs diff=lfs merge=lfs -text
+audio/*.ogg filter=lfs diff=lfs merge=lfs -text
+audio/aup_files/ filter=lfs diff=lfs merge=lfs -text
