--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 audio/*.ogg filter=lfs diff=lfs merge=lfs -text
 audio/aup_files/ filter=lfs diff=lfs merge=lfs -text
+/fonts filter=lfs diff=lfs merge=lfs -text
